# Vesuviuschallenge

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: PHerc1447.json  PHerc1667.json
docs/plans/: 2026-03-06-ct-sheet-switching.md  2026-03-08-mesh-qa-v2-design.md
notebooks/: 01_explore_data.py
scripts/: ct_heatmap.py  diagnose_ct.py  diagnose_ct2.py  diagnose_ct3.py  download_fragments.py  download_fragments.sh  validate_ct_alignment.py  view_ply.py
src/data/: dataset.py
src/inference/: predict.py
src/models/: ink_detector.py
src/training/: train.py
src/utils/: device.py
src/vesuvius_mesh_qa/: README.md  __init__.py  cli.py  ct_normals.py  volume.py
src/vesuvius_mesh_qa/io/: discovery.py  loader.py
src/vesuvius_mesh_qa/metrics/: base.py  ct_switching.py  fiber_coherence.py  intersections.py  layer_distance.py  noise.py  normals.py  summary.py  topology.py  triangle.py  winding_angle.py
src/vesuvius_mesh_qa/report/: csv_report.py  html_viewer.py  json_report.py  visualize.py
src/vesuvius_mesh_qa/utils/: chunked.py
tests/: conftest.py  test_cli_integration.py  test_ct_normals.py  test_ct_switching.py  test_fiber_coherence.py  test_html_viewer.py  test_integration.py  test_layer_distance.py  test_metrics.py  test_volume.py  test_winding_angle.py
